# bookbank

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  go.mod  go.sum
.github/: labeler.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
.github/workflows/: docker.yaml  labeler.yaml  release-please.yaml
api/python/: README.md  pyproject.toml
api/python/bookbank/: __init__.py  api.py  exceptions.py  utils.py
api/python/example/: example.py
docs/: install.md
docs/examples/: compose.yaml
helper/: books.json  config.toml
helper/books/: books.go
helper/changelog/: changelog.go
helper/config/: config.go
helper/isbn/: isbn.go
helper/log/: log.go
src/: main.go
src/upload/: upload.go
web/: add.html  changelog.html  handlers.go  index.html  library.html  listen.html
web/static/css/: base.css  changelog.css  index.css  library.css  listen.css  new.css
web/static/js/: add.js  index.js  listen.js
